# IfcOpenShell

./: README  README~
cmake/: CMakeLists.txt
cmake/.svn/: all-wcprops  entries
cmake/.svn/text-base/: CMakeLists.txt.svn-base
src/ifcgeom/: IfcGeom.h  IfcGeomFunctions.cpp  IfcGeomObjects.cpp
src/ifcgeom/.svn/: all-wcprops  entries
src/ifcgeom/.svn/text-base/: IfcGeomWires.cpp.svn-base
src/ifcjni2/: .classpath  .project  CMakeLists.txt
src/ifcjni2/jni/: library.cpp  org_ifcopenshell_jni_Library.h
src/ifcjni2/src/org/ifcopenshell/jni/: Library.java
src/ifcjni2/src/org/ifcopenshell/model/: IfcGeometryObject.java  IfcMesh.java  IfcObject.java  ResizingArrayStack.java
src/ifcjni2/src/org/ifcopenshell/process/: ProcessIfcFile.java
src/ifcjni2/src/org/ifcopenshell/util/: HashCodeUtil.java  Utils.java
src/ifcparse/: IfcCharacterDecoder.cpp  IfcCharacterDecoder.h  IfcFile.h  IfcHierarchyHelper.cpp  IfcHierarchyHelper.h  IfcUtil.h  IfcWrite.h
src/ifcparse/.svn/: all-wcprops  entries
src/ifcparse/.svn/text-base/: Ifc2x3.cpp.svn-base  Ifc2x3.h.svn-base  IfcParse.cpp.svn-base  IfcParse.h.svn-base  IfcWritableEntity.h.svn-base  IfcWrite.cpp.svn-base
